--- a/tests/pdf_template.html
+++ b/tests/pdf_template.html
@@ -39,7 +39,7 @@
 <body>
 <h1 class="header">Аналитика по зарплатам и городам для профессии {{ name }}</h1>
 
-<img src="file:///C:/Users/bosso/PycharmProjects/Задание Питон/2.1.3/graph.png">
+<img src="file:///C:/Users/Acer/Desktop/CVS/graph.png">
 
 <!--Макрос, чтобы заполнить первую табличку-->
 
